@@ -11,7 +11,8 @@ Description: The OpenMx Project intends to rewrite and extend the
  - which generate extremely large amounts of data often with complex
  time-dependent patterning; and increased sophistication in the statistical models used to analyze the data. 
 License: Apache License 2.0
-Depends: methods, snowfall
+Depends: methods
+Suggests: snowfall
 LazyLoad: yes
 LazyData: yes
 Collate: MxData.R MxReservedNames.R MxNamespace.R MxUntitled.R MxCharOrNumber.R MxMatrixOperators.R MxMatrix.R DiagMatrix.R FullMatrix.R IdenMatrix.R LowerMatrix.R SdiagMatrix.R StandMatrix.R SymmMatrix.R UnitMatrix.R ZeroMatrix.R MxAlgebra.R MxAlgebraConvert.R MxEval.R MxPath.R MxObjectiveFunction.R MxBounds.R MxConstraint.R MxTypes.R MxModel.R MxRAMModel.R MxModelDisplay.R MxFlatModel.R MxMultiModel.R MxModelFunctions.R MxUnitTesting.R MxAlgebraObjective.R MxFIMLObjective.R MxMLObjective.R MxRAMObjective.R MxRObjective.R MxReferences.R MxRun.R MxSummary.R MxSwift.R MxOptions.R MxThreshold.R OriginalMx.R MxGraphviz.R MxVersion.R zzz.R
