@@ -14,6 +14,7 @@ TRUNK
 * implemented free parameter and fixed parameter substitution in mxAlgebra statements
 * implemented global variable substitution in mxAlgebra statements
 * turned off matrix and algebra substitution until a new proposal is decided
+* snow and snowfall are no longer required packages
 
 Release 0.1.3-776
 =============
